--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Linear algebra library for Typescript and JavaScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts",
     "precommit": "lint-staged"
   },
   "author": "Joshua Brown",
@@ -13,10 +13,15 @@
     "lodash": "^4.17.10"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.4",
     "@types/lodash": "^4.14.110",
+    "@types/mocha": "^5.2.3",
+    "chai": "^4.1.2",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
+    "mocha": "^5.2.0",
     "prettier": "^1.13.5",
+    "ts-node": "^7.0.0",
     "typescript": "^2.9.2"
   },
   "lint-staged": {
