--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
   },
   "author": "Joshua Brown",
   "license": "ISC",
-  "dependencies": {
-    "lodash": "^4.17.10"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.1.4",
-    "@types/lodash": "^4.14.110",
     "@types/mocha": "^5.2.3",
     "chai": "^4.1.2",
     "husky": "^0.14.3",
