--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "mocha -r ts-node/register src/**/*.spec.ts **/*.spec.ts",
+    "test-coverage": "nyc --extension=.ts --exclude=**/*.spec.ts mocha -r ts-node/register src/**/*.spec.ts **/*.spec.ts",
     "precommit": "lint-staged",
     "format": "prettier --write"
   },
@@ -19,6 +20,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "mocha": "^5.2.0",
+    "nyc": "^12.0.2",
     "prettier": "^1.13.5",
     "ts-node": "^7.0.0",
     "typescript": "^2.9.2"
