--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "tsc",
     "test": "mocha -r ts-node/register src/**/*.spec.ts **/*.spec.ts",
     "test-coverage": "nyc --extension=.ts --exclude=**/*.spec.ts mocha -r ts-node/register src/**/*.spec.ts **/*.spec.ts",
-    "precommit": "lint-staged",
     "format": "prettier --write",
     "docs": "typedoc --out ./docs/ --readme ./README.md --theme minimal --exclude **/*.spec.ts --excludePrivate ./src/"
   },
@@ -18,7 +17,7 @@
     "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.3",
     "chai": "^4.1.2",
-    "husky": "^0.14.3",
+    "husky": "^1.1.4",
     "lint-staged": "^7.2.0",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
@@ -26,6 +25,11 @@
     "ts-node": "^7.0.0",
     "typedoc": "^0.11.1",
     "typescript": "^2.9.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.{ts,json,css,md}": [
