--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "mocha -r ts-node/register src/**/*.spec.ts **/*.spec.ts",
     "test-coverage": "nyc --extension=.ts --exclude=**/*.spec.ts mocha -r ts-node/register src/**/*.spec.ts **/*.spec.ts",
     "format": "prettier --write '**/*.{ts,json,css,md}'",
-    "lint": "tslint 'src/**/*.ts'",
+    "format:check": "prettier --check '**/*.{ts,json,css,md}'",
+    "lint": "tslint --fix 'src/**/*.ts'",
+    "lint:check": "tslint 'src/**/*.ts'",
     "docs": "typedoc --out ./api-docs/ --readme none --theme minimal --exclude '**/+(*.spec.ts|index.ts)' --excludePrivate ./src/"
   },
   "dependencies": {},
@@ -23,7 +25,7 @@
     "lint-staged": "^7.2.0",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
-    "prettier": "^1.13.5",
+    "prettier": "^1.16.4",
     "ts-node": "^7.0.0",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
