--- a/package.json
+++ b/package.json
@@ -1,45 +1,58 @@
 {
   "name": "@josh-brown/vector",
-  "version": "0.0.2",
-  "author": "Joshua Brown",
-  "license": "ISC",
+  "author": "Joshua Brown <jbrown1.618@gmail.com>",
+  "version": "1.0.0",
   "description": "A linear algebra library written in TypeScript that focuses on generality, extensibility, and ease of use.",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:jbrown1618/vector.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jbrown1618/vector/issues"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "mocha -r ts-node/register src/**/*.spec.ts **/*.spec.ts",
-    "test-coverage": "nyc --extension=.ts --exclude=**/*.spec.ts mocha -r ts-node/register src/**/*.spec.ts **/*.spec.ts",
-    "format": "prettier --write '**/*.{ts,json,css,md}'",
-    "format:check": "prettier --check '**/*.{ts,json,css,md}'",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts",
+    "test-coverage": "nyc --extension=.ts --exclude=**/*.spec.ts mocha -r ts-node/register src/**/*.spec.ts",
+    "format": "prettier --write './*.json' 'src/**/*.{ts,json,md}'",
+    "format:check": "prettier --check './*.json' 'src/**/*.{ts,json,md}'",
     "lint": "tslint --fix 'src/**/*.ts'",
     "lint:check": "tslint 'src/**/*.ts'",
     "docs": "typedoc --out ./api-docs/ --readme none --theme minimal --exclude '**/+(*.spec.ts|index.ts)' --excludePrivate ./src/"
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/chai": "^4.1.4",
-    "@types/mocha": "^5.2.3",
-    "chai": "^4.1.2",
-    "husky": "^1.1.4",
-    "lint-staged": "^7.2.0",
-    "mocha": "^5.2.0",
-    "nyc": "^12.0.2",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
+    "chai": "^4.2.0",
+    "highlight.js": "^9.13.1",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.4",
+    "mocha": "^6.0.1",
+    "nyc": "^13.3.0",
     "prettier": "^1.16.4",
-    "ts-node": "^7.0.0",
-    "tslint": "^5.12.1",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.13.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-no-unused-expression-chai": "^0.1.4",
-    "typedoc": "^0.11.1",
-    "typescript": "^2.9.2"
+    "typedoc": "^0.14.2",
+    "typescript": "^3.3.3333"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run lint && npm test"
+      "pre-commit": "lint-staged && npm test"
     }
   },
   "lint-staged": {
-    "*.{ts,json,css,md}": [
+    "*.ts": [
+      "prettier --write",
+      "tslint --fix",
+      "git add"
+    ],
+    "*.{json,md}": [
       "prettier --write",
       "git add"
     ]
