--- a/package.json
+++ b/package.json
@@ -21,24 +21,26 @@
     "benchmark": "ts-node --project './tsconfig-benchmark.json' './benchmarks/benchmark.ts'",
     "format": "prettier --write './*.json' 'src/**/*.{ts,json,md}'",
     "format:check": "prettier --check './*.json' 'src/**/*.{ts,json,md}'",
-    "lint": "tslint --fix 'src/**/*.ts'",
-    "lint:check": "tslint 'src/**/*.ts'",
+    "lint": "eslint --fix 'src/**/*.ts'",
+    "lint:check": "eslint 'src/**/*.ts'",
     "docs": "typedoc --out ./api-docs/ --readme none --theme minimal --exclude '**/+(*.spec.ts|index.ts)' --excludePrivate ./src/"
   },
   "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
     "chai": "^4.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.4",
-    "mocha": "^6.0.1",
-    "nyc": "^13.3.0",
-    "prettier": "^1.16.4",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
+    "prettier": "^1.17.1",
     "ts-node": "^8.0.2",
-    "tslint": "^5.15.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-no-unused-expression-chai": "^0.1.4",
     "typedoc": "^0.14.2",
     "typescript": "^3.4.1"
   },
@@ -50,7 +52,7 @@
   "lint-staged": {
     "*.ts": [
       "prettier --write",
-      "tslint --fix",
+      "eslint --fix",
       "git add"
     ],
     "*.{json,md}": [
