--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@josh-brown/vector",
   "author": "Joshua Brown <jbrown1.618@gmail.com>",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A linear algebra library written in TypeScript that focuses on generality, extensibility, and ease of use.",
   "license": "MIT",
   "repository": {
@@ -46,6 +46,14 @@
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   },
+  "files": [
+    "README.md",
+    "LICENSE",
+    "docs/*.md",
+    "dist/vector.d.ts",
+    "dist/**/*.js",
+    "dist/**/*.js.map"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
