--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
   "types": "dist/vector.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "mocha -r ts-node/register 'src/**/*.spec.ts'",
-    "coverage": "nyc --extension=.ts --exclude='**/*.spec.ts' --reporter=html npm run test",
-    "coverage:check": "nyc --extension=.ts --exclude=**/*.spec.ts --check-coverage --branches 95 --lines 95 --functions 100 npm run test",
+    "test": "jest",
+    "coverage": "jest --coverage",
     "benchmark": "ts-node --project './tsconfig-benchmark.json' './benchmarks/benchmark.ts'",
     "format": "prettier --write './*.json' 'src/**/*.{ts,json,md}'",
     "format:check": "prettier --check './*.json' 'src/**/*.{ts,json,md}'",
@@ -30,19 +29,17 @@
   "devDependencies": {
     "@microsoft/api-documenter": "^7.3.8",
     "@microsoft/api-extractor": "^7.3.2",
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.7",
+    "@types/jest": "^24.0.18",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
-    "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^1.3.1",
+    "jest": "^24.9.0",
     "lint-staged": "^8.2.1",
-    "mocha": "^6.2.0",
-    "nyc": "^14.1.1",
     "prettier": "^1.18.2",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   },
