--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,9 @@
     "esModuleInterop": true,
 
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+
+    "types": ["jest"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
