Added test utility to load sample data

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "main": "dist/index.js",
   "types": "dist/vector.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --project tsconfig.build.json",
     "test": "jest",
     "coverage": "jest --coverage",
-    "benchmark": "ts-node --project './tsconfig-benchmark.json' './benchmarks/benchmark.ts'",
+    "benchmark": "ts-node --project './tsconfig.benchmark.json' './benchmarks/benchmark.ts'",
     "format": "prettier --write './*.json' 'src/**/*.{ts,json,md}'",
     "format:check": "prettier --check './*.json' 'src/**/*.{ts,json,md}'",
     "lint": "eslint --fix 'src/**/*.ts'",
@@ -29,9 +29,12 @@
   "devDependencies": {
     "@microsoft/api-documenter": "^7.3.8",
     "@microsoft/api-extractor": "^7.3.2",
+    "@types/csv-parse": "^1.2.2",
     "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.4",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
+    "csv-parse": "^4.4.5",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
