--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: CI
 on:
   push:
     branches:
-    - *
+    - '*'
   pull_request:
     branches:
-    - master
+    - 'master'
 
 jobs:
   build:
