Add LinearRegressor; use absolute paths when possible

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,6 +8,11 @@
     "sourceMap": true,
     "outDir": "./dist/",
 
+    "baseUrl": "./src",
+    "paths": {
+      "@lib/*": ["../src/*"]
+    },
+
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
