--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,9 @@ jobs:
       - run: |
           npm install
           npm run build
+          npm run format:check
+          npm run lint:check
+          npm run docs:check
           npm run coverage
         env:
           CI: true
