--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,11 +18,7 @@ jobs:
           node-version: 12
       - run: |
           npm install
-          npm run build
-          npm run format:check
-          npm run lint:check
-          npm run docs:check
-          npm run coverage
+          npm run ci
         env:
           CI: true
 
