--- a/package.json
+++ b/package.json
@@ -22,29 +22,30 @@
     "lint": "eslint --fix '**/*.ts'",
     "lint:check": "eslint '**/*.ts'",
     "docs": "api-extractor run --local && api-documenter markdown --input-folder temp/ --output-folder docs/api/",
-    "docs:check": "api-extractor run"
+    "docs:check": "api-extractor run",
+    "ci": "npm run build && npm run format:check && npm run lint:check && npm run docs:check && npm run coverage"
   },
   "dependencies": {},
   "devDependencies": {
     "@microsoft/api-documenter": "^7.7.0",
     "@microsoft/api-extractor": "^7.7.0",
     "@types/csv-parse": "^1.2.2",
-    "@types/jest": "^24.0.18",
+    "@types/jest": "^24.0.24",
     "@types/node": "^12.7.4",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
-    "csv-parse": "^4.4.5",
-    "csv-stringify": "^5.3.3",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "husky": "^1.3.1",
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
+    "csv-parse": "^4.8.2",
+    "csv-stringify": "^5.3.6",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^3.1.0",
     "jest": "^24.9.0",
-    "lint-staged": "^8.2.1",
-    "prettier": "^1.18.2",
-    "ts-jest": "^24.0.2",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.3"
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "ts-jest": "^24.2.0",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.4"
   },
   "files": [
     "docs/*.md",
