--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint:check": "eslint '**/*.ts'",
     "docs": "api-extractor run --local && api-documenter markdown --input-folder temp/ --output-folder docs/api/",
     "docs:check": "api-extractor run",
-    "ci": "npm run build && npm run format:check && npm run lint:check && npm run docs:check && npm run coverage"
+    "ci": "npm run format:check && npm run lint:check && npm run build && npm run docs:check && npm run coverage"
   },
   "dependencies": {},
   "devDependencies": {
