--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,8 @@ name: Publish to NPM
 
 on:
   push:
-    tags: 'v*'
+    branches:
+      - master
 
 jobs:
   verify:
@@ -22,25 +23,25 @@ jobs:
         env:
           CI: true
 
-  publish:
+  release:
     needs: verify
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
-      - uses: actions/setup-node@v1
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
           node-version: 12
-
-      - run: |
+      - name: Install and build
+        run: |
           npm install
           npm run build
         env:
           CI: true
-      - run: |
-          npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
-          npm publish
+      - name: Release
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        run: npx semantic-release
