--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
     "docs:check": "api-extractor run",
     "ci": "npm run format:check && npm run lint:check && npm run build && npm run docs:check && npm run coverage"
   },
-  "dependencies": {
-    "@semantic-release/github": "^7.1.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@microsoft/api-documenter": "^7.8.44",
     "@microsoft/api-extractor": "^7.8.44",
+    "@semantic-release/github": "^7.1.1",
     "@types/csv-parse": "^1.2.2",
     "@types/jest": "^26.0.13",
     "@types/node": "^14.6.4",
@@ -56,6 +55,11 @@
     "dist/**/*.js",
     "dist/**/*.js.map"
   ],
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
